# 6c57-optimizers

./: README.md  pyproject.toml
notebooks/: linear_regression.ipynb  logistic_regression.ipynb  test.ipynb  train_iris.ipynb
src/: linear_regression.py  logistic_regression.py  models.py  optimizers.py  utils.py
