[tool.poetry]
name = "6c57-optimizers"
version = "0.1.0"
description = ""
authors = ["Eric Chen <deeplearningericchen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
tqdm = "^4.66.6"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
